--- a/cloudbuild/prod.yml
+++ b/cloudbuild/prod.yml
@@ -1,10 +1,10 @@
 steps:
-  # - name: 'gcr.io/cloud-builders/docker'
-  #   args: ["pull", "us.gcr.io/$PROJECT_ID/stellar-core:prod-latest"]
+  - name: 'gcr.io/cloud-builders/docker'
+    args: ["pull", "us.gcr.io/$PROJECT_ID/stellar-core:prod-latest"]
   - name: 'gcr.io/cloud-builders/docker'
     args:
       - "build"
-      # - "--cache-from=us.gcr.io/$PROJECT_ID/stellar-core:prod-latest"
+      - "--cache-from=us.gcr.io/$PROJECT_ID/stellar-core:prod-latest"
       - "--file=Dockerfile"
       - "--tag=us.gcr.io/$PROJECT_ID/stellar-core:prod-latest"
       - "--tag=us.gcr.io/$PROJECT_ID/stellar-core:$REVISION_ID"
